--- a/YtAPIscraping.ipynb
+++ b/YtAPIscraping.ipynb
@@ -5856,10 +5856,10 @@
     "fig = px.bar(total_views_per_month, \n",
     "             x='Month', \n",
     "             y='Views',\n",
-    "             color='Month',  # This replaces the 'hue' parameter in Seaborn\n",
+    "             color='Month', \n",
     "             title='Total Views per Month for The Weeknd Videos',\n",
     "             labels={'Views': 'Total Views'},\n",
-    "             color_discrete_sequence=px.colors.qualitative.Set1)  # This replaces the 'palette' parameter\n",
+    "             color_discrete_sequence=px.colors.qualitative.Set1) \n",
     "\n",
     "# Customize the layout\n",
     "fig.update_layout(\n",
@@ -5869,9 +5869,8 @@
     "    xaxis_title_font_size=14,\n",
     "    yaxis_title_font_size=14,\n",
     "    legend_title_text='Month',\n",
-    "    height=600,  # Adjust the height as needed\n",
-    "    width=900    # Adjust the width as needed\n",
-    ")\n",
+    "    height=600, \n",
+    "    width=900    \n",
     "fig.update_traces(\n",
     "    hovertemplate='<b>Month:</b> %{x}<br><b>Total Views:</b> %{y:,.0f}'\n",
     ")\n"
